# HackNation_2025_SkillSense

./: .env  .env.example  .gitignore  CLAUDE.md  DEBUG_SESSION_COMPLETE.md  DOCUMENTATION_SETUP.md  GEMINI_RETRYERROR_FIXED.md  GEMINI_RETRY_ERROR_FIX.md  MULTI_SOURCE_PROCESSING.md  RAG_IMPLEMENTATION_SUMMARY.md  README.md  SETUP.md  STATUS.md  TESTING_READY.md  TROUBLESHOOTING.md  app.py  convert_to_pdf.py  main.py  pyproject.toml  test_installation.py
.claude/: settings.local.json
.claude/agents/: code-reviewer.md
config/: skill_taxonomy.json  source_weights.json
docs/: CODEBASE_WALKTHROUGH_1MIN.md  CRITICAL_FIX_ENV_SETUP.md  DEBUG_FIXES_SUMMARY.md  GEMINI_FIX_SUMMARY.md  MULTI_SOURCE_FEATURE.md  PHASE2_SUMMARY.md  PRESENTATION_GUIDE.md  PROJECT_RETROSPECTIVE.md  PROJECT_SUMMARY.md  QUICK_START.md  RAG_GUIDE.md  README.md  TESTING_READY.md  debug_gemini_error.py  test_error_fix.py  verify_gemini_fix.py
info/: Information.md
src/analysis/: job_matcher.py
src/data_ingestion/: github_collector.py  pdf_extractor.py  text_processor.py
src/profile_generation/: profile_builder.py
src/rag/: llm_client.py  prompts.py  rag_system.py  vector_store.py
src/skill_extraction/: confidence_scorer.py  skill_extractor.py
src/visualization/: __init__.py  charts.py  colors.py  layouts.py  metrics.py
