[project]
name = "hacknation-2025-skillsense"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.72.0",
    "beautifulsoup4>=4.14.2",
    "faiss-cpu>=1.12.0",
    "google-generativeai>=0.8.5",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "openai>=2.7.1",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "pygithub>=2.8.1",
    "pymupdf>=1.26.6",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "spacy>=3.8.8",
    "streamlit>=1.51.0",
    "tenacity>=9.1.2",
    "transformers>=4.57.1",
]
